<resources>
    <!-- HomeFragment() -->
    <string name="app_name">TestTaskMobile</string>
    <string name="ecommerce_concept">Ecommerce Concept</string>
    <string name="select_category">Select Category</string>
    <string name="view_all">view all</string>
    <string name="phones">Phones</string>
    <string name="computer">Computer</string>
    <string name="health">Health</string>
    <string name="books">Books</string>
    <string name="camera">Camera</string>
    <string name="hot_sales">Hot Sales</string>
    <string name="see_more">see more</string>
    <string name="best_seller">Best Seller</string>
    <string name="new_phone">New</string>
    <string name="buy_now">Buy Now!</string>

    <!-- FilterFragment() -->
    <string name="filter_options">Filter options</string>
    <string name="done">Done</string>
    <string name="brand">Brand</string>
    <string name="price">Price</string>
    <string name="size">Size</string>
    <string name="all_brands">All brands</string>

    <string name="inches">4.5 to 5.5 inches</string>

    <!-- DetailFragment() -->
    <string name="product_details">Product Details</string>
    <string name="shop">Shop</string>
    <string name="details">Details</string>
    <string name="features">Features</string>
    <string name="select_color_and_capability">Select color and capability</string>
    <string name="GB">GB</string>
    <string name="gb">gb</string>
    <string name="add_to_cart">Add to Cart</string>

    <!-- CartFragment() -->
    <string name="add_address">Add address</string>
    <string name="my_cart">My Cart</string>
    <string name="total">Total</string>
    <string name="delivery">Delivery</string>
    <string name="checkout">Checkout</string>
    <string name="explorer">Explorer</string>
    <string name="count">1</string>
    <string name="us">us</string>
</resources>