<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:behavior_hideable="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/filterOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_options"
        android:textSize="18sp"
        android:textColor="@color/dark_blue"
        android:fontFamily="@font/mark_pro_medium"
        android:layout_marginTop="31dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/backCardView"
        android:layout_width="37dp"
        android:layout_height="37dp"
        app:cardCornerRadius="10dp"
        android:layout_marginStart="44dp"
        app:cardBackgroundColor="@color/dark_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/filterOptions"
        app:layout_constraintBottom_toBottomOf="@id/filterOptions">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/close"
            android:layout_gravity="center"/>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/doneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:textSize="13sp"
        android:fontFamily="@font/mark_pro_bold"
        android:textColor="@color/white"
        app:cornerRadius="10dp"
        android:backgroundTint="@color/orange"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/filterOptions"
        app:layout_constraintBottom_toBottomOf="@id/filterOptions"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/brand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brand"
        android:textSize="18sp"
        android:textColor="@color/dark_blue"
        android:fontFamily="@font/mark_pro_medium"
        android:layout_marginStart="46dp"
        android:layout_marginTop="46dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filterOptions"/>
    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/brandSpinner"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:background="@drawable/bg_spinner"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="31dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/brand"/>
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="16dp"
        android:layout_height="8dp"
        android:src="@drawable/spinner_arrow"
        android:layout_marginEnd="14dp"
        app:layout_constraintEnd_toEndOf="@id/brandSpinner"
        app:layout_constraintTop_toTopOf="@id/brandSpinner"
        app:layout_constraintBottom_toBottomOf="@id/brandSpinner"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textSize="18sp"
        android:textColor="@color/dark_blue"
        android:fontFamily="@font/mark_pro_medium"
        android:layout_marginStart="46dp"
        android:layout_marginTop="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/brandSpinner"/>
    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/priceSpinner"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:background="@drawable/bg_spinner"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="31dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/price"/>
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="16dp"
        android:layout_height="8dp"
        android:src="@drawable/spinner_arrow"
        android:layout_marginEnd="14dp"
        app:layout_constraintEnd_toEndOf="@id/priceSpinner"
        app:layout_constraintTop_toTopOf="@id/priceSpinner"
        app:layout_constraintBottom_toBottomOf="@id/priceSpinner"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/size"
        android:textSize="18sp"
        android:textColor="@color/dark_blue"
        android:fontFamily="@font/mark_pro_medium"
        android:layout_marginStart="46dp"
        android:layout_marginTop="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/priceSpinner"/>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/sizeSpinner"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:background="@drawable/bg_spinner"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="31dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/size"
        app:layout_constraintBottom_toBottomOf="parent">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inches"
            android:textSize="18sp"
            android:textColor="@color/dark_blue"
            android:fontFamily="@font/mark_pro_regular"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="14dp"/>
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="16dp"
            android:layout_height="8dp"
            android:src="@drawable/spinner_arrow"
            android:layout_marginEnd="14dp"
            android:layout_gravity="end|center_vertical"/>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>