<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray">
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/backCardView"
                android:layout_width="37dp"
                android:layout_height="37dp"
                app:cardCornerRadius="10dp"
                android:layout_marginStart="24dp"
                app:cardBackgroundColor="@color/dark_blue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/arrow_back"
                    android:layout_gravity="center"/>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_address"
                android:textSize="15sp"
                android:textColor="@color/dark_blue"
                android:fontFamily="@font/mark_pro_medium"
                android:layout_marginEnd="9dp"
                app:layout_constraintEnd_toStartOf="@id/geotagCardView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/geotagCardView"
                android:layout_width="37dp"
                android:layout_height="37dp"
                app:cardCornerRadius="10dp"
                android:layout_marginStart="24dp"
                app:cardBackgroundColor="@color/orange"
                android:layout_marginEnd="35dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/geotag"
                    android:backgroundTint="@color/white"
                    android:layout_gravity="center"/>
            </com.google.android.material.card.MaterialCardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.MaterialToolbar>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_cart"
                android:textSize="35sp"
                android:textColor="@color/dark_blue"
                android:fontFamily="@font/mark_pro_bold"
                android:layout_marginStart="42dp"
                android:layout_marginTop="42dp"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="49dp"
                android:background="@drawable/bg_bottom">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/basketRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    tools:listitem="@layout/item_cart"
                    tools:itemCount="2"
                    android:layout_marginTop="57dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/linear"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/telegrey"
                    android:layout_marginTop="148dp"
                    app:layout_constraintTop_toBottomOf="@id/basketRecyclerView"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total"
                    android:textSize="15sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/mark_pro_regular"
                    android:layout_marginStart="55dp"
                    android:layout_marginTop="15dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/linear"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/totalTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="$6,000 us"
                    android:textSize="15sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/mark_pro_bold"
                    android:layout_marginEnd="35dp"
                    android:layout_marginTop="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/total"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/delivery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delivery"
                    android:textSize="15sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/mark_pro_regular"
                    android:layout_marginStart="55dp"
                    android:layout_marginTop="12dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/total"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/deliveryTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Free"
                    android:textSize="15sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/mark_pro_bold"
                    android:layout_marginTop="12dp"
                    app:layout_constraintStart_toStartOf="@id/totalTextView"
                    app:layout_constraintBottom_toBottomOf="@id/delivery"/>
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/secondLinear"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/telegrey"
                    android:layout_marginTop="26dp"
                    app:layout_constraintTop_toBottomOf="@id/delivery"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/checkButton"
                    android:layout_width="0dp"
                    android:layout_height="54dp"
                    android:text="@string/checkout"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/mark_pro_bold"
                    android:textAllCaps="false"
                    app:cornerRadius="10dp"
                    android:backgroundTint="@color/orange"
                    android:layout_marginStart="44dp"
                    android:layout_marginEnd="44dp"
                    android:layout_marginTop="27dp"
                    android:layout_marginBottom="44dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/secondLinear"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/orange"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>