<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_gray">
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/geotag"
                android:layout_marginEnd="11dp"
                app:layout_constraintEnd_toStartOf="@id/citiesSpinner"
                app:layout_constraintTop_toTopOf="@id/citiesSpinner"
                app:layout_constraintBottom_toBottomOf="@id/citiesSpinner"/>
            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/citiesSpinner"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:entries="@array/citiesList"
                android:background="@null"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/spinner_arrow"
                app:layout_constraintEnd_toEndOf="@id/citiesSpinner"
                app:layout_constraintTop_toTopOf="@id/citiesSpinner"
                app:layout_constraintBottom_toBottomOf="@id/citiesSpinner"/>
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/filterImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/filter"
                android:layout_marginEnd="35dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/citiesSpinner"
                app:layout_constraintBottom_toBottomOf="@id/citiesSpinner"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.MaterialToolbar>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/bottomToolbar">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_category"
                android:textSize="25sp"
                android:textColor="@color/dark_blue"
                android:fontFamily="@font/mark_pro_bold"
                android:layout_marginStart="17dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_all"
                android:textSize="15sp"
                android:textColor="@color/orange"
                android:fontFamily="@font/mark_pro_regular"
                android:layout_marginEnd="33dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/category"
                app:layout_constraintBottom_toBottomOf="@id/category"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/categoryRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="11dp"
                android:layout_marginEnd="11dp"
                android:layout_marginTop="24dp"
                tools:listitem="@layout/item_category"
                tools:itemCount="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/category"/>
            <androidx.appcompat.widget.SearchView
                android:id="@+id/searchView"
                android:layout_width="300dp"
                android:layout_height="34dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="35dp"
                app:queryHint="Search"
                android:background="@drawable/search_box"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/categoryRecyclerView"/>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="34dp"
                android:layout_height="34dp"
                app:cardCornerRadius="50dp"
                android:backgroundTint="@color/orange"
                android:layout_marginStart="11dp"
                app:layout_constraintStart_toEndOf="@id/searchView"
                app:layout_constraintTop_toTopOf="@id/searchView"
                app:layout_constraintBottom_toBottomOf="@id/searchView">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/qrcode"
                    android:layout_gravity="center"/>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/hotSales"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hot_sales"
                android:textSize="25sp"
                android:textColor="@color/dark_blue"
                android:fontFamily="@font/mark_pro_bold"
                android:layout_marginStart="17dp"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/searchView"/>
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/hotSeeMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/see_more"
                android:textSize="15sp"
                android:textColor="@color/orange"
                android:fontFamily="@font/mark_pro_regular"
                android:layout_marginEnd="33dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/hotSales"
                app:layout_constraintBottom_toBottomOf="@id/hotSales"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/hotSalesRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/hotSales"/>
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/bestSeller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/best_seller"
                android:textSize="25sp"
                android:textColor="@color/dark_blue"
                android:fontFamily="@font/mark_pro_bold"
                android:layout_marginStart="17dp"
                android:layout_marginTop="3dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/hotSalesRecyclerView"/>
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/bestSeeMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/see_more"
                android:textSize="15sp"
                android:textColor="@color/orange"
                android:fontFamily="@font/mark_pro_regular"
                android:layout_marginEnd="33dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/bestSeller"
                app:layout_constraintBottom_toBottomOf="@id/bestSeller"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/bestSellerRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/bestSeller"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/bottomToolbar"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:background="@drawable/bg_bottom"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/circle"
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:src="@drawable/circle"
                android:layout_marginStart="68dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/explorer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/explorer"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:fontFamily="@font/mark_pro_bold"
                android:layout_marginStart="7dp"
                app:layout_constraintStart_toEndOf="@id/circle"
                app:layout_constraintTop_toTopOf="@id/circle"
                app:layout_constraintBottom_toBottomOf="@id/circle"/>
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/basketImageView"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@drawable/cart"
                app:layout_constraintStart_toEndOf="@id/explorer"
                app:layout_constraintEnd_toStartOf="@id/favoriteImageView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/countCardView"
                android:layout_width="18dp"
                android:layout_height="18dp"
                app:cardCornerRadius="50dp"
                app:cardBackgroundColor="@color/orange"
                android:layout_marginStart="6dp"
                android:layout_marginBottom="6dp"
                app:layout_constraintStart_toStartOf="@id/basketImageView"
                app:layout_constraintBottom_toBottomOf="@id/basketImageView"
                android:visibility="gone">
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/countTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="2"
                    android:textSize="12sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/mark_pro_regular"
                    android:layout_gravity="center"/>
            </com.google.android.material.card.MaterialCardView>
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/favoriteImageView"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:background="@drawable/favorite_border_white"
                app:layout_constraintStart_toEndOf="@id/basketImageView"
                app:layout_constraintEnd_toStartOf="@id/userImageView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/userImageView"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:background="@drawable/user"
                app:layout_constraintStart_toEndOf="@id/favoriteImageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.MaterialToolbar>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/orange"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>